<resources>
    <string name="user_name">UserName <font color="red">*</font></string>
    <string name="title_activity_empr_company_pro">empr_company_pro</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_employer_comp">EmployerComp</string>
    <string name="title_activity_emprjobpost">Emprjobpost</string>
    <string name="app_name">JobReady365</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_jpolicy">JPolicy</string>
    <string name="policy_security_title">Security</string>
    <string name="policy_security_body">The information that the App collects may be stored locally on your Device and
        may be transmitted to our servers in countries of the European Union (“EU”), the United States (“U.S.”),
        Germany and/or other countries where GoldenICTSolutions, its affiliates or any of their service providers operate.
        The transmission of information over wireless and wired networks is not inherently secure.
        JobReady365 uses many tools to help protect your personal information against unauthorized access and disclosure.
        However, we do not guarantee that your personal information or private communications will always remain private when using the App.</string>
    <string name="policy_change_title">Changes</string>
    <string name="policy_question_title">Product questions and contact</string>
    <string name="policy_question_body">The Golden ICT Solutions company that licenses the App, not any Service Provider,
        is responsible for addressing any questions, comments or claims relating to the App and/or your use of the App.
        See below the Golden ICT Solutions companies and addresses to which you can direct your questions:

Golden ICT Solutions office address below
No 5, Third Floor, Parami Rd, Hlaing Township, Yangon, Myanmar. \n

Contact numbers: \n
+95 94564 56978 \n
+95 97777 1732 \n
+95 97800 09117 \n
Email: info@goldenictsolutions.com</string>
    <string name="Accept">
        
        I agree
    </string>
    <string name="policy_user_control_title">User control and uninstall</string>
    <string name="policy_grant_title">Grant of license</string>
    <string name="policy_license_restrict_title">License restrictions</string>
    <string name="policy_term_title">Term and termination</string>
    <string name="policy_warranty_title">Warranty</string>
    <string name="policy_third_title">Third party beneficiary</string>
    <string name="policy_third_body">You acknowledge and agree that Service Providers are third party beneficiaries of these terms and
        upon your acceptance of the terms of this Agreement, Service Providers will have the right (and are deemed to have accepted the right)
        to enforce these terms against you as a third party beneficiary thereof.</string>
    <string name="policy_Property_title">Intellectual property rights</string>
    <string name="policy_Property_body">You acknowledge that, in the event of any third party claim that the App or your possession
        and/or use of the App infringes that third party’s intellectual property rights, Golden ICT Solutions, not any Service Provider,
        will be solely responsible for the investigation, defense, settlement and discharge of any such intellectual property infringement claim.</string>
    <string name="policy_product_title">Product claims</string>
    <string name="policy_product_body">
        You acknowledge that Golden ICT Solutions, not any Service Provider, is responsible for addressing any claim you or any third party may have relating to the App or your possession and/or use of the App, including but not limited to:
        (i) product liability claims \n
        (ii) any claim that the App fails to conform to any applicable legal or regulatory requirement and \n
        (iii) claims arising under consumer protection or similar legislation.
</string>
    <string name="policy_warranty_body">The App is provided subject to the ‘Disclaimer of Warranties and Liability’ section of the Golden ICT Solutions Website Terms and Conditions. Service Providers have no warranty obligation hereunder and give no guarantees with respect to the App or in relation to the sale, distribution or use thereof. Any claims, losses, liabilities, damages, costs or expenses attributable to any failure to conform to Golden ICT Solutions’s warranty will be Golden ICT Solutions’s sole responsibility. To the extent permitted by applicable law, Service Providers exclude any implied warranties or conditions, including, without limitation, any implied warranties or conditions of quality, performance, results, durability, title, merchantability, fitness for a particular purpose and non-infringement arising by statute or otherwise in law or from a course of dealing or usage of trade arising out of or related to this Agreement or arising out of or related to any associated programs, processes, products or services or their performance or their failure to perform. Service Providers shall not be responsible for any breach of this Agreement.
</string>
    <string name="policy_term_body">The license is effective for an indefinite period of time, until Golden ICT Solutins terminates it, or until you provide notice to Golden ICT Solutions your decision to terminate it. Your rights under this license will terminate automatically without notice to you if you fail to comply with any of the provisions of this Agreement. Golden ICT Solutions reserves the right to suspend, discontinue, enhance, update or otherwise modify the App, or its availability to you, at any time without notice. Upon termination of the license to the App, you will cease all use of the App.</string>
    <string name="policy_license_restrict_body">You agree to the following license restrictions:
(a) to use the App solely for your personal use \n
(b) to not install or use a copy of the App on a device that you do not own or control \n
(c) to not duplicate, copy or distribute the App, except as necessary to use it on your Device \n
(d) to not license, sell, rent, lease, lend, transfer, assign, distribute, host, outsource, disclose or otherwise commercially exploit the App or make the App available to any third party \n
(e) to not use the App for any fraudulent, unlawful or illegal activity or in any way that could harm the App or impair anyone else’s use of it or a wireless network or to try to gain unauthorized access to any service, data, account or network by any means \n
(f) to not modify, translate, or create derivative works based on the App or disassemble, decompile or reverse engineer any part of the App, except and only to the extent that applicable law expressly permits, despite this limitation \n
(g) to not work around any technical limitations in the App and \n
(h) to preserve all copyright and other proprietary rights notices on the App and all copies thereof.</string>
    <string name="policy_grant_body">
JobReady365 is a mobile application which you can download free from online stores. Golden ICT Solutions grants to you a transferable without payment of any fees to Golden ICT Solutions and use the App according to the terms and conditions set forth in this Agreement. The App is licensed, not sold, to you. Except as expressly granted by this Agreement or otherwise by Golden ICT Solutions or its licensors in writing, you acquire no right, title or license in the App or any data, software, content, application or materials accessed from or incorporated in the App. This Agreement does not give you any rights to any updates or upgrades to the App or to any maintenance releases, patches, fixes, extensions or enhancements (collectively, “Updates”) to the App developed by Golden ICT Solutions or its suppliers or licensors at any time in the future. Except as required under applicable law, this license does not entitle you to receive any maintenance or support services with respect to the App. Golden ICT Solutions may provide Updates and/or support. If provided by Golden ICT Solutions, Updates may be delivered automatically or you may be notified when a new Update is ready to be installed, or we make such Updates available for download. You authorize Golden ICT Solutions to deliver automatically any Update if we believe it is necessary to provide for the continued
functionality of the App or for any reasonable business purpose. Your use of the Updates will be governed by this Agreement unless you are asked to agree to new or additional terms at the time of download or installation. You also agree that you may have to enter into a renewed version of this Agreement if you want to download, install or use a new or modified version of the App.</string>
    <string name="policy_user_control_body">
You can access and change user settings for the App from the options/settings menu on your Device. Uninstallation methods vary depending on your Device. To uninstall the App, please consult yourDevice manual.</string>
    <string name="policy_change_body">
Golden ICT Solutions reserves the right to update, revise, supplement and otherwise modify this Agreement from time to time. Any such changes to this Agreement will be effective immediately for new users and Seven (7) days after notification (including by posting a notice on the applicable JobReady365 facebook official page) for current users. Registered users are
encouraged to review this Agreement periodically for changes. If you do not wish to accept any change, please uninstall and discontinue using the App. Your continued use of the App following the seven (7) day notice period constitutes your acceptance of those changes.</string>
    <string name="policy_end_user_license_title">End user license agreement for JobReady365 mobile application and JobReady365 website</string>
    <string name="login">Login</string>
    <string name="Current_working">Currently Working</string>
    <string name="or">(or)</string>
    <string name="Login_Mobile">Mobile Number</string>
    <string name="Login_Password">Password</string>
    <string name="Forget">Forget Password</string>
    <string name="Sing_up">Sign Up</string>
    <string name="Login">Login</string>
    <string name="Cancel1">Cancel</string>
    <string name="more_appointment">Appointment</string>
    <string name="more_log_out">Logout</string>
    <string name="more_applyjob">Applied Job</string>
    <string name="more_change_language">Change Language</string>
    <string name="more_registered_mobile_no">Registered Mobile No</string>
    <string name="more_Policy">Policy and Agreement</string>
    <string name="more_Feedback">Feedback</string>
    <string name="upgrade_history">Upgrade History</string>
    <string name="topup_histroy">Topup History</string>
    <string name="more_myanmar">ျမန္မာ</string>
    <string name="more_english">English</string>
    <string name="resume_qualification">            Other Qualification </string>
    <string name="university">University</string>
    <string name="Degree">Degree</string>
    <string name="edu_start_Date">Start Date </string>
    <string name="edu_end_Date">End Date </string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="center_name">Center Name</string>
    <string name="course">Course</string>
    <string name="Upload">          Upload          </string>
    <string name="dialog_organization">Organization/Position</string>
    <string name="work_scope">Work Scope</string>
</resources>