<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/change_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/Register_MobileNo"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_register"
                style="@style/more_text"
                android:gravity="start"
                android:text="@string/more_registered_mobile_no" />

            <TextView
                android:id="@+id/register_noo"
                style="@style/more_text"
                android:gravity="end"
                android:text="WWWWWW" />
        </RelativeLayout>

        <View style="@style/move_view" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/changelanguage"
                style="@style/more_text"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight=".8"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/more_change_language" />

            <RadioGroup
                android:id="@+id/more_rgp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_english"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/more_english" />

                <RadioButton
                    android:id="@+id/radio_myanmar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/more_myanmar" />
            </RadioGroup>
        </LinearLayout>


        <View style="@style/move_view" />

        <LinearLayout
            android:id="@+id/AppoitmentTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_appointment"
                style="@style/more_text"
                android:text="@string/more_appointment" />

        </LinearLayout>

        <View style="@style/move_view" />

        <LinearLayout
            android:id="@+id/AppliedJobs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_applied_job"
                style="@style/more_text"
                android:text="@string/more_applyjob" />

        </LinearLayout>

        <View style="@style/move_view" />

        <LinearLayout
            android:id="@+id/top_up_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_top_up_history"
                style="@style/more_text"
                android:text="@string/topup_histroy" />

        </LinearLayout>

        <View style="@style/move_view" />


        <LinearLayout
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_feedback"
                style="@style/more_text"
                android:text="@string/more_Feedback" />
        </LinearLayout>

        <View style="@style/move_view" />

        <LinearLayout
            android:id="@+id/policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_policy"
                style="@style/more_text"
                android:text="@string/more_Policy" />
        </LinearLayout>

        <View style="@style/move_view" />

        <LinearLayout
            android:id="@+id/LogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_logout"
                style="@style/more_text"
                android:text="@string/more_log_out" />
        </LinearLayout>

        <View style="@style/move_view" />
    </LinearLayout>
</RelativeLayout>