<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

        <ImageView
            android:layout_margin="10dp"
            android:id="@+id/imageView_resume_photo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@drawable/icon_and_button_01"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_upload_imageView"
                style="@style/dialog_btn"
                android:text="@string/Upload" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/or"
                android:textColor="@color/txt_font" />

            <!-- Record video button -->

            <Button
                android:id="@+id/btn_dismiss_imageView"
                style="@style/dialog_btn"
                android:text="@string/Cancel1" />
        </LinearLayout>

</LinearLayout>